# sales-data-pipeline

./: README.md  main.py  pyproject.toml
src/: extract.py  load.py  pipeline.py  transform.py
tests/: test_transform.py
