[project]
name = "sales-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "pytest>=9.0.3",
]
[tool.pytest.ini_options]
pythonpath = ["."]
# When running tests, include the current project folder in Python's import path.